<resources>
    <string name="app_name">Tunify</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="search">Search</string>
    <string name="more">More</string>
    <string name="folders">Folders</string>
    <string name="genres">Genres</string>
    <string name="artists">Artists</string>
    <string name="albums">Albums</string>
    <string name="all_songs">All Songs</string>
    <string name="playlists">Playlists</string>
    <string name="play_queue">Play Queue</string>
    <string name="home">Home</string>
    <string name="about">About</string>
    <string name="hello_blank_fragment">Hello World</string>
    <string name="album_art">Album Art</string>
    <string name="library">Library</string>
    <string name="number_of_tracks">%d tracks</string>
    <string name="number_of_albums">%d albums</string>
</resources>
