<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_play_queue"
            android:title="@string/play_queue" />
        <item
            android:id="@+id/nav_playlists"
            android:title="@string/playlists" />
        <item
            android:id="@+id/nav_all_songs"
            android:title="@string/all_songs" />
        <item
            android:id="@+id/nav_albums"
            android:title="@string/albums" />
        <item
            android:id="@+id/nav_artists"
            android:title="@string/artists" />
        <item
            android:id="@+id/nav_genres"
            android:title="@string/genres" />
        <item
            android:id="@+id/nav_folders"
            android:title="@string/folders" />
    </group>

    <item android:title="@string/more">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:title="@string/action_settings" />
            <item
                android:id="@+id/nav_about"
                android:title="@string/about" />
        </menu>
    </item>

</menu>
